Button comp jsx completed

--- a/frontend/src/styles/overrides.scss
+++ b/frontend/src/styles/overrides.scss
@@ -1,3 +1,5 @@
 .MuiInputBase-input {
     font-family: "Poppins" !important;
 }
+
+// TODO: override buttons css for different variants and disabled as well.
