--- a/frontend/src/styles/overrides.scss
+++ b/frontend/src/styles/overrides.scss
@@ -3,7 +3,12 @@
     font-weight: 400 !important;
 }
 
+.MuiFormLabel-root {
+    font-size: 16px !important;
+    font-weight: 400 !important;
+}
+
 .MuiButtonBase-root  {
     text-transform: none !important;
-    padding: 4px 16px ;
+    padding: 4px 16px;
 }
