--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -2,21 +2,31 @@
 
 .header-container {
   display: flex;
+  height: 50px;
   align-items: center;
-  padding: 8px 32px;
+  padding: 0px 32px;
   background-color: $primary;
   color: $white;
   justify-content: space-between;
-  height: fit-content;
   
   .navigation-tabs {
     display: flex;
     align-items: center;
-    height: 100%;
+    height: inherit;
 
-    .menu-heading {
+    .heading-container {
+      height: calc(100% - 3px);
+      padding: 0px 12px;
+      display: flex;
+      align-items: center;
       margin-right: 32px;
       cursor: pointer;
+      padding-bottom: 3px;
+    }
+
+    .active {
+      border-bottom: 3px solid $white;
+      padding-bottom: 0px;
     }
   }
 
@@ -33,5 +43,12 @@
       color: $white;
       border-color: $white;
     }
+  }
+}
+
+.header-menu-container {
+  padding: 6px 0px ;
+  .submenu {
+    font-weight: 400;
   }
 }
