--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -12,4 +12,6 @@ body {
     box-sizing: border-box;
     font-family: "Poppins";
     color: $black;
+    font-size: 14px;
+    font-weight: 400;
 }
