--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -11,3 +11,6 @@ $secondary: #FDA402;
 $secondaryDark: #C47500;
 $secondaryLight: #FFD54A;
 
+$green: #219653;
+$red: #FF304F;
+$boxShadow: 0px 2px 6px rgba(0, 0, 0, 0.05)
