word card ui updated

--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -37,3 +37,9 @@
 .light {
     font-weight: 300 !important;
 }
+
+.bodyLight {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 18px;
+}
