--- a/frontend/src/components/widgets/wordCard/WordCard.scss
+++ b/frontend/src/components/widgets/wordCard/WordCard.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: flex-start;
   box-shadow: $boxShadow;
+  cursor: pointer;
 
   .word-info {
     margin-left: 6px;
@@ -23,6 +24,8 @@
 
       .menu-icon {
         cursor: pointer;
+        width: 20px;
+        height: 20px;
       }
     }
 
@@ -34,6 +37,7 @@
       margin-top: 8px;
       font-weight: 300;
       text-overflow: ellipsis;
+      @extend .bodyLight;
     }
   }
 
