--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -46,9 +46,6 @@
   }
 }
 
-.header-menu-container {
-  padding: 6px 0px ;
-  .submenu {
-    font-weight: 400;
-  }
+.menu-container {
+  padding: 6px 0px;
 }
