--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -33,3 +33,13 @@
     src: url(../assets/fonts/Poppins-Black.ttf);
     font-weight: 800;
 }
+
+.light {
+    font-weight: 300 !important;
+}
+
+.bodyLight {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 18px;
+}
