word details panel WIP

--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -13,4 +13,10 @@ $secondaryLight: #FFD54A;
 
 $green: #219653;
 $red: #FF304F;
-$boxShadow: 0px 2px 6px rgba(0, 0, 0, 0.05)
+$boxShadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
+$borderColor: #000000;
+
+
+
+
+$header_height: 50px;
