--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -2,7 +2,7 @@
 
 .header-container {
   display: flex;
-  height: 50px;
+  height: $header_height;
   align-items: center;
   padding: 0px 32px;
   background-color: $primary;
