--- a/frontend/src/components/pages/explore/Explore.scss
+++ b/frontend/src/components/pages/explore/Explore.scss
@@ -1,10 +1,63 @@
 @import "../../../styles/main.scss";
 
 .explore-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .heading {
+    margin-bottom: 32px;
+  }
+  
   .word-grid-container {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 16px;
+  }
+
+  .pagination {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 32px 0px;
+
+    
+
+    .card-per-page {
+      display: flex;
+      align-items: center;
+
+      .Mui-focused {
+        .MuiOutlinedInput-notchedOutline {
+          border: 1px solid $borderColor;
+        }
+      }
+
+      .MuiInputBase-root {
+        margin-left: 8px;
+        .MuiSelect-root {
+          padding: 0px 0px 0px 16px;
+          width: 70px;
+          height: 32px;
+          display: flex;
+          align-items: center;
+          font-size: 14px !important;
+        }
+      }
+    }
+
+
+    .Mui-selected {
+      background-color: $primary;
+      color: white;
+    }
+
+    .MuiButtonBase-root:hover {
+      background-color: $primaryLight;
+    }
+
+    #card-per-page {}
   }
 }
