explore page completed

--- a/frontend/src/components/widgets/wordCard/WordCard.scss
+++ b/frontend/src/components/widgets/wordCard/WordCard.scss
@@ -23,6 +23,7 @@
       align-items: center;
 
       .menu-icon {
+        z-index: 2;
         cursor: pointer;
         width: 20px;
         height: 20px;
