--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -33,3 +33,14 @@
     src: url(../assets/fonts/Poppins-Black.ttf);
     font-weight: 800;
 }
+
+.labelHeading {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 24px;
+}
+.bodyRegular {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 14px;
+}
