--- a/frontend/src/styles/overrides.scss
+++ b/frontend/src/styles/overrides.scss
@@ -1,10 +1,12 @@
+@import "./colors.scss";
+
 .MuiInputBase-input {
-    font-size: 16px !important;
+    font-size: 15px !important;
     font-weight: 400 !important;
 }
 
 .MuiFormLabel-root {
-    font-size: 16px !important;
+    font-size: 15px !important;
     font-weight: 400 !important;
 }
 
