authentication frontend completed

--- a/frontend/src/components/widgets/wordDetails/WordDetails.scss
+++ b/frontend/src/components/widgets/wordDetails/WordDetails.scss
@@ -11,7 +11,7 @@
   .word-details-container {
 
     .header {
-      height: $header_height;
+      height: $headerHeight;
       display: flex;
       justify-content: space-between;
       align-items: center;
