--- a/frontend/src/components/pages/login/Login.scss
+++ b/frontend/src/components/pages/login/Login.scss
@@ -2,65 +2,125 @@
 
 .login-screen {
   padding: 0px !important;
+
   .login-container {
     width: 100%;
     height: calc(100vh);
     overflow: hidden;
     position: relative;
     display: flex;
+    justify-content: flex-end;
 
     .watermark {
       height: 100vh;
       position: absolute;
       top: 0px;
       left: 0px;
-      transform: translateX(-300px);
-      box-shadow: $boxShadow;
+      transform: translateX(-240px);
+    }
+
+    .greetings {
+      @extend .headerBlack;
+      color: $white;
+      left: 32px;
+      top: 25%;
+      position: absolute;
+      z-index: 100;
+      text-align: left;
     }
 
     .form {
-      margin-top: 100px;
-      margin-left: 500px;
+      width: 70%;
+      height: 100vh;
+      position: relative;
+      background-color: $white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0px 240px 0px 120px;
 
       .heading {
         @extend .labelHeading;
-        margin-bottom: 32px;
+        margin-bottom: 8px;
       }
+
       .input-field {
-        margin-bottom: 24px;
+        margin-top: 24px;
         @extend .bodyRegular;
       }
+
+      .helper-text {
+        @extend .bodyLight;
+        margin-bottom: 8px;
+        .link {
+          color: blue;
+          text-decoration: underline;
+          cursor: pointer;
+          font-weight: 400;
+        }
+      }
+      .helper-text-login {
+        @extend .bodyLight;
+        margin: 32px 0px 8px;
+        .link {
+          color: blue;
+          text-decoration: underline;
+          cursor: pointer;
+          font-weight: 400;
+        }
+      }
+
+      .remember-me {
+        width: fit-content;
+        margin: 8px 0px 32px 0px;
+
+        .MuiTypography-root {
+          @extend .bodyLight;
+        }
+      }
+
+      .btn {
+        padding: 8px 0px;
+        margin-bottom: 24px;
+      }
+
+      .circle {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        position: absolute;
+        top: -80px;
+        right: -30px;
+        background-color: $primary;
+
+        &::after {
+          top: 150px;
+          right: 230px;
+          content: "";
+          position: absolute;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          background-color: $primary;
+        }
+
+        &::before {
+          top: 230px;
+          right: 80px;
+          content: "";
+          position: absolute;
+          width: 14px;
+          height: 14px;
+          border-radius: 50%;
+          background-color: $primary;
+        }
+      }
+
+      .spin-animate {
+        animation: spin-360 500ms ease-in;
+        animation-fill-mode: forwards;
+      }
     }
 
-    .circle {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      position: absolute;
-      top: -80px;
-      right: -30px;
-      background-color: $primary;
-
-      &::after {
-        top: 150px;
-        right: 230px;
-        content: "";
-        position: absolute;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        background-color: $primary;
-      }
-      &::before {
-        top: 230px;
-        right: 80px;
-        content: "";
-        position: absolute;
-        width: 14px;
-        height: 14px;
-        border-radius: 50%;
-        background-color: $primary;
-      }
-    }
   }
 }
