--- a/frontend/src/layout/container/Container.scss
+++ b/frontend/src/layout/container/Container.scss
@@ -2,7 +2,7 @@
 
 .page-container {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 20px 32px;
     display: flex;
     flex-direction: column;
