--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -2,6 +2,7 @@ $white: #ffffff;
 $black: #000000;
 $primaryGradient: linear-gradient(223.9deg, #760E25 -0.02%, rgba(253, 164, 2, 0.4) 91.59%);
 $offWhite: #eeeeee;
+$offBlack: #313639;
 
 $primary: #760E25;
 $primaryDark: #450000;
@@ -15,4 +16,5 @@ $headerHeight: 50px;
 $green: #219653;
 $red: #FF304F;
 $boxShadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
+$boxShadowDark: 10px 10px 50px rgba(0, 0, 0, 0.5);
 $borderColor: #000000;
