--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -39,6 +39,11 @@
     font-weight: 700;
     font-size: 24px;
 }
+.headerBlack {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 54px;
+}
 .bodyRegular {
     font-family: Poppins;
     font-weight: 400;
@@ -50,6 +55,6 @@
 
 .bodyLight {
     font-weight: 300;
-    font-size: 12px;
+    font-size: 13px;
     line-height: 18px;
 }
