--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -34,12 +34,27 @@
     font-weight: 800;
 }
 
+.labelHeading {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 24px;
+}
+.headerBlack {
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 54px;
+}
+.bodyRegular {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 14px;
+}
 .light {
     font-weight: 300 !important;
 }
 
 .bodyLight {
     font-weight: 300;
-    font-size: 12px;
+    font-size: 13px;
     line-height: 18px;
 }
