login signup api endpoints integrated

--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -15,6 +15,7 @@ $secondaryLight: #FFD54A;
 $headerHeight: 50px;
 $green: #219653;
 $red: #eb2926;
+$grey: #C4C4C4;
 $redBackground: #ffede7;
 $boxShadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
 $boxShadowDark: 10px 10px 50px rgba(0, 0, 0, 0.5);
