home page hero section redesigned

--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -4,11 +4,13 @@
   display: flex;
   height: $headerHeight;
   align-items: center;
-  padding: 0px 32px;
-  background-color: $primary;
-  color: $white;
+  padding: 32px 64px;
+  z-index: 100;
+  background-color: transparent;
+  color: $primary;
+  width: 100%;
   justify-content: space-between;
-  
+
   .navigation-tabs {
     display: flex;
     align-items: center;
@@ -26,7 +28,7 @@
     }
 
     .active {
-      border-bottom: 3px solid $white;
+      border-bottom: 3px solid $primary;
       padding-bottom: 0px;
     }
   }
@@ -38,12 +40,12 @@
 
     .login-btn {
       margin-right: 16px;
-      color: $white;
+      color: $primary;
     }
 
     .signup-btn {
-      color: $white;
-      border-color: $white;
+      color: $primary;
+      border-color: $primary;
     }
   }
 }
