--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -46,6 +46,12 @@
     font-size: 44px;
 }
 
+.headerSemiBold {
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 36px;
+}
+
 .bodyRegular {
     font-family: Poppins;
     font-weight: 400;
