--- a/frontend/src/components/pages/home/home.scss
+++ b/frontend/src/components/pages/home/home.scss
@@ -4,22 +4,34 @@
   display: flex;
   flex-direction: column;
   padding: 0px !important;
-  background-color: $offWhite;
 
+  
   .hero-section {
+    .header-container {
+      position: fixed;
+      top: 0px;
+      left: 0px;
+    }
+    overflow: hidden;
     display: flex;
-    background-image: url(../../../assets/images/landingImage.jpg);
+    padding: 64px;
+    padding-bottom: 0px;
+    flex-direction: column;
+    background-image: url(../../../assets/images/backgroundMesh.svg);
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
-    height: 500px;
+    height: fit-content;
     width: 100%;
+    padding-top: 16px;
 
     .content {
+      padding: 64px 0px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       position: relative;
+      height: 100%;
 
       .overlay {
         height: 100%;
@@ -30,21 +42,66 @@
       }
 
       .tagline {
-        @extend .headerBlack;
-        font-size: 40px !important;
+        font-size: 2.8vw;
+        font-weight: 500;
         z-index: 2;
-        color: $white;
+        color: $primary;
         width: 35%;
-        margin-left: 32px;
+      }
+
+      .girl {
+        width: 44%;
+        height: auto;
+        position: absolute;
+        bottom: 0px;
+        right: -2%;
+      }
+
+      .boy {
+        bottom: 0px;
+        right: 22%;
+        position: absolute;
+        height: auto;
+        width: 30%; 
+      }
+
+      .line {
+        position: absolute;
+
+        &.one {
+          width: 20%;
+          height: auto;
+          top: 20%;
+          left: 35%;
+
+        }
+
+        &.three {
+          height: auto;
+          width: 12%;
+          top: 14%;
+          right: -5%;
+        }
+
+        &.two {
+          bottom: 0%;
+          left: 9%;
+          height: auto;
+          width: 14%;
+        }
+      }
+
+      .sub-tagline {
+        @extend .bodyRegular;
+        width: 35%;
+        margin: 16px 0px 32px 0px;
+        color: $primary;
       }
 
       .outlined-btn {
-        margin: 32px 0px 24px 32px;
         width: fit-content;
         z-index: 2;
         padding: 8px 28px;
-        border-radius: 20px;
-        background-color: $secondary;
       }
     }
   }
