--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -4,18 +4,21 @@
   display: flex;
   height: $headerHeight;
   align-items: center;
-  padding: 0px 32px;
-  background-color: $primary;
-  color: $white;
+  padding: 32px 64px;
+  z-index: 100;
+  background-color: transparent;
+  color: $primary;
+  width: 100%;
   justify-content: space-between;
-  
+
   .navigation-tabs {
     display: flex;
     align-items: center;
     height: inherit;
 
     .heading-container {
-      height: calc(100% - 3px);
+      height: 100%;
+      // height: calc(100% - 3px);
       padding: 0px 12px;
       display: flex;
       align-items: center;
@@ -25,7 +28,7 @@
     }
 
     .active {
-      border-bottom: 3px solid $white;
+      border-bottom: 3px solid $primary;
       padding-bottom: 0px;
     }
   }
@@ -33,15 +36,16 @@
   .call-for-actions {
     display: flex;
     align-items: center;
+    @extend .bodyRegular;
 
     .login-btn {
       margin-right: 16px;
-      color: $white;
+      color: $primary;
     }
 
     .signup-btn {
-      color: $white;
-      border-color: $white;
+      color: $primary;
+      border-color: $primary;
     }
   }
 }
