--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -15,4 +15,15 @@ body {
     color: $black;
     font-size: 14px;
     font-weight: 400;
+    position: relative;
+}
+
+body::-webkit-scrollbar {
+    width: 4px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 3px;
 }
