login signup moved to saga

--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -33,6 +33,20 @@
     }
   }
 
+  .avatar-container {
+    display: flex;
+    align-items: center;
+    height: inherit;
+    cursor: pointer;
+    
+    .avatar {
+      margin-left: 16px;
+      background-color: $primary;
+      width: 32px;
+      height: 32px;
+    }
+  }
+
   .call-for-actions {
     display: flex;
     align-items: center;
