--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -18,5 +18,7 @@ $red: #eb2926;
 $grey: #C4C4C4;
 $redBackground: #ffede7;
 $boxShadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
+$boxShadowMedium: 10px 10px 50px rgba(0, 0, 0, 0.2);
 $boxShadowDark: 10px 10px 50px rgba(0, 0, 0, 0.5);
 $borderColor: #000000;
+$gutters: 64px;
