--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -68,7 +68,7 @@
     line-height: 18px;
 }
 
-.labelSemibold {
+.labelSemiBold {
     font-family: Poppins;
     font-weight: 500;
     font-size: 18px;
