--- a/frontend/src/components/pages/home/home.scss
+++ b/frontend/src/components/pages/home/home.scss
@@ -14,7 +14,7 @@
     }
     overflow: hidden;
     display: flex;
-    padding: 64px;
+    padding: $gutters;
     padding-bottom: 0px;
     flex-direction: column;
     background-image: url(../../../assets/images/backgroundMesh.svg);
@@ -106,6 +106,77 @@
     }
   }
 
+  .services-container {
+    width: 100%;
+    height: 550px;
+    padding: 60px $gutters;
+    background-color: $white;
+    position: relative;
+
+    .line {
+      position: absolute;
+      height: 400px;
+      width: 100vw;
+      left: 0px;
+      top: 160px;
+      z-index: 1;
+    }
+
+    .heading {
+      color: $primary;
+      @extend .headerSemiBold;
+      font-size: 24px;
+      margin-bottom: 32px;
+    }
+    .sub-heading {
+      color: $primary;
+      width: 50%;
+    }
+
+    .cards-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+
+      .card {
+        z-index: 2;
+        background-color: $white;
+        margin-right: 36px;
+        width: 100%;
+        height: 232px;
+        width: 240px;
+        border-radius: 6px;
+        box-shadow: $boxShadowMedium;
+        padding: 16px;
+
+        .icon {
+          height: 70px;
+          margin-bottom: 16px;
+        }
+
+        .heading {
+          color: $primary;
+          @extend .labelSemiBold;
+          margin-bottom: 16px;
+        }
+
+        .details {
+          @extend .bodyLight;
+        }
+
+        &:nth-of-type(1) {
+          margin-top: 90px;
+        }
+        &:nth-of-type(2) {
+          margin-top: 20px;
+        }
+        &:nth-of-type(3) {
+          margin-top: -50px;
+        }
+      }
+    }
+  }
+
   .testimonials-slider {
     background-color: $white;
     margin: 64px 0px;
@@ -144,7 +215,7 @@
       }
     }
     .heading {
-      @extend .labelSemibold;
+      @extend .labelSemiBold;
       font-weight: 500;
       text-transform: uppercase;
       letter-spacing: 4px;
