--- a/frontend/src/components/pages/explore/Explore.scss
+++ b/frontend/src/components/pages/explore/Explore.scss
@@ -83,9 +83,9 @@
   .pagination {
     width: 100%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin: 32px 0px;
+    position: relative;
 
     .card-per-page {
       display: flex;
@@ -116,6 +116,12 @@
           background-color: white;
         }
       }
+    }
+
+    .MuiPagination-root {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
 
