--- a/frontend/src/components/widgets/wordDetails/WordDetails.scss
+++ b/frontend/src/components/widgets/wordDetails/WordDetails.scss
@@ -9,6 +9,14 @@
     height: 100%;
   }
   .word-details-container {
+    position: relative;
+
+    .cross-icon {
+      position: absolute;
+      top: 30px;
+      right:20px;
+      cursor: pointer;
+    }
 
     .header {
       height: $headerHeight;
@@ -26,8 +34,11 @@
     }
 
     .hero-section {
-      padding: 24px 16px;
+      padding: 24px 24px 24px 20px;
 
+      .MuiButtonBase-root {
+        padding: 2px;
+      }
       .top-row {
         display: flex;
         align-items: center;
@@ -51,7 +62,7 @@
 
   .footer {
     padding: 16px;
-    border-top: 1px solid $borderColor;
+    border-top: 1px solid $grey;
     .MuiButton-root {
       margin-right: 16px;
       color: $white;
