--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -14,6 +14,7 @@ $secondaryLight: #FFD54A;
 
 $headerHeight: 64px;
 $green: #219653;
+$greenBackground: #F0FFFB;
 $red: #eb2926;
 $grey: #C4C4C4;
 $redBackground: #ffede7;
