--- a/frontend/src/components/pages/quizzes/Quiz.scss
+++ b/frontend/src/components/pages/quizzes/Quiz.scss
@@ -44,8 +44,8 @@
       .options-container {
         display: flex;
         flex-direction: column;
-        width: 100%;
-        align-items: center;
+        width: fit-content;
+        align-items: flex-start;
       }
 
       .btn-container {
