--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -58,6 +58,12 @@
     font-size: 14px;
 }
 
+.bodySemibold {
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 14px;
+}
+
 .light {
     font-weight: 300 !important;
 }
