--- a/frontend/src/components/widgets/option/Option.scss
+++ b/frontend/src/components/widgets/option/Option.scss
@@ -1,12 +1,13 @@
 @import "../../../styles/main.scss";
 
 .option-container {
-  height: fit-content;
+  height: 100%;
   border-radius: 4px;
   background-color: $white;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   box-shadow: $boxShadow;
   cursor: pointer;
   max-width: 600px;
@@ -22,7 +23,7 @@
   }
 
   .info {
-    width: 100%;
+    width: calc(100% - 6px);
     margin-left: 6px;
     background-color: $white;
     border-radius: 4px;
