--- a/frontend/src/components/pages/quizzes/Quiz.scss
+++ b/frontend/src/components/pages/quizzes/Quiz.scss
@@ -5,6 +5,7 @@
 
   .container {
     display: flex;
+
     .left {
       background: url("../../../assets/images/MeshQuiz.svg");
       background-repeat: no-repeat;
@@ -30,6 +31,35 @@
           color: $primary;
         }
       }
+
+      .ques-container {
+        margin-top: 64px;
+        display: grid;
+        grid-gap: 32px;
+        grid-template-columns: repeat(5, 1fr);
+        flex-wrap: wrap;
+        width: fit-content;
+        height: fit-content;
+        justify-content: center;
+        align-items: center;
+
+        .ques-box {
+          border-radius: 6px;
+          background-color: $white;
+          color: $black;
+          font-weight: 700;
+          width: 38px;
+          height: 38px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          &.completed {
+            background-color: $green;
+            color: $white;
+          }
+        }
+      }
     }
 
     .right {
@@ -44,7 +74,7 @@
       .options-container {
         display: flex;
         flex-direction: column;
-        width: fit-content;
+        width: 100%;
         align-items: flex-start;
       }
 
@@ -83,41 +113,49 @@
   }
 }
 
-.stepper-container {
-  width: 60%;
-  height: fit-content;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: $white;
-  border: none;
-  outline: none;
-  border-radius: 8px;
-  padding: 32px;
 
-  .MuiStepper-root {
-    padding-inline: 0px;
-  }
+.background-modal {
+  background: url(../../../assets/images/backgroundMesh.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 
-  .btn-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 32px;
+  .stepper-container {
+    width: 60%;
+    height: fit-content;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: $white;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    padding: 32px;
 
-    .MuiButtonBase-root {
-      width: fit-content;
-      padding: 4px 32px;
+    .MuiStepper-root {
+      padding-inline: 0px;
     }
 
-  }
+    .btn-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 32px;
 
-  .content {
-    margin-top: 16px;
+      .MuiButtonBase-root {
+        width: fit-content;
+        padding: 4px 32px;
+      }
 
-    .points {
-      margin: 0px 0px 8px 16px;
+    }
+
+    .content {
+      margin-top: 16px;
+
+      .points {
+        margin: 0px 0px 8px 16px;
+      }
     }
   }
 }
