Quiz for not logged in client handled

--- a/frontend/src/components/pages/login/Login.scss
+++ b/frontend/src/components/pages/login/Login.scss
@@ -92,6 +92,7 @@
       .btn {
         padding: 8px 0px;
         margin-bottom: 24px;
+        width: 100% !important;
       }
 
       .circle {
