--- a/frontend/src/components/shared/button/Button.scss
+++ b/frontend/src/components/shared/button/Button.scss
@@ -1,7 +1,8 @@
 @import "../../../styles/main.scss";
 
 .button {
-
+    padding: 6px 64px !important;
+    width: fit-content !important;
 }
 
 .rounded-btn {
