avatar menu ui bug fixed

--- a/frontend/src/components/pages/leaderboard/Leaderboard.scss
+++ b/frontend/src/components/pages/leaderboard/Leaderboard.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/main.scss";
 
-.leaderboard {
+.leaderboard-page-container {
   background: url(../../../assets/images/backgroundMesh.svg);
   background-position: center;
   background-size: cover;
