--- a/frontend/src/components/widgets/quizStepper/QuizStepper.scss
+++ b/frontend/src/components/widgets/quizStepper/QuizStepper.scss
@@ -11,7 +11,7 @@
   border: none;
   outline: none;
   border-radius: 8px;
-  padding: 32px;
+  padding: 16px 32px 32px 32px;
 
   .MuiStepper-root {
     padding-inline: 0px;
@@ -32,6 +32,23 @@
 
   .content {
     margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .all-set {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+
+      .lottie {
+        height: 300px;
+        transform: translateY(-32px);
+      }
+    }
 
     .points {
       margin: 0px 0px 8px 16px;
