--- a/frontend/src/components/pages/result/Result.scss
+++ b/frontend/src/components/pages/result/Result.scss
@@ -31,6 +31,7 @@
       top: 0px;
       width: 40%;
       min-height: 100vh;
+      height: 100%;
       display: flex;
       flex-direction: column;
       background: url(../../../assets/images/MeshQuiz.svg);
