cancel quiz end prompt fixed

--- a/frontend/src/components/pages/result/Result.scss
+++ b/frontend/src/components/pages/result/Result.scss
@@ -22,6 +22,10 @@
         color: $primary;
         grid-column: 1/4;
       }
+
+      // .question-card-container {
+      //   pointer-events: none !important;
+      // }
     }
 
     .right {
