Bug - quiz alert + prompt added + LoggedIn logic updated. (#65)
* Bug - Quiz Stepper fixed. (#57)

* result correction check fixed

* routing fixed in unauthorized access

* avatar menu name changed

* explore filter resolved

* filters reset when page initially loaded fixed

* no results lottie added

* quiz stepper fixed

* Bug - update status for not logged in user resolved. (#58)

* result correction check fixed

* routing fixed in unauthorized access

* avatar menu name changed

* explore filter resolved

* filters reset when page initially loaded fixed

* no results lottie added

* quiz stepper fixed

* update status for not logged in user resolved

* Bug - quiz corner cases fix (#59)

* handle refresh quiz completed, WIP for navigation block while quiz in progress

* quiz corner cases fix

* status filter removed for non logged in user (#60)

* Bug - Quiz alert and prompt added + changed react-router-dom v6 to v5 (#61)

* status filter removed for non logged in user

* quiz prompt and alert added

* Loggedin - logic updated + prettier fix. (#62)

* status filter removed for non logged in user

* quiz prompt and alert added

* cancel quiz end prompt fixed

* prettier fix

* loggedIn logic changed

--- a/frontend/src/components/pages/result/Result.scss
+++ b/frontend/src/components/pages/result/Result.scss
@@ -22,6 +22,10 @@
         color: $primary;
         grid-column: 1/4;
       }
+
+      // .question-card-container {
+      //   pointer-events: none !important;
+      // }
     }
 
     .right {
@@ -31,6 +35,7 @@
       top: 0px;
       width: 40%;
       min-height: 100vh;
+      height: 100%;
       display: flex;
       flex-direction: column;
       background: url(../../../assets/images/MeshQuiz.svg);
