--- a/frontend/src/components/shared/accordion/Accordion.scss
+++ b/frontend/src/components/shared/accordion/Accordion.scss
@@ -6,12 +6,16 @@
   outline: none;
 
   .MuiAccordionSummary-root {
-    padding: 4px 16px 4px 0px;
+    padding: 4px 16px ;
     border: none;
     outline: none;
 
     .MuiAccordionSummary-content {
       margin: 12px 0px;
+
+      .summary-expanded {
+        margin: 12px 0px !important;
+      }
     }
   }
 
@@ -24,7 +28,7 @@
     padding: 0px 0px 0px 8px;
 
     .MuiAccordionDetails-root {
-      padding: 0px 0px 0px 16px;
+      padding: 0px 16px 0px 8px;
 
       .meaning-li {
         .MuiTypography-root {
