--- a/frontend/src/components/widgets/dynamicInputs/DynamicInputs.module.scss
+++ b/frontend/src/components/widgets/dynamicInputs/DynamicInputs.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/typography.scss";
+@import "../../../styles/colors.scss";
 
 .inputs {
   display: flex;
@@ -17,6 +18,7 @@
 
   &__add-btn {
     padding: 4px 32px;
+    background-color: $white !important;
   }
 
   &__field-container {
@@ -26,5 +28,6 @@
   &__input-field {
     width: 100%;
     margin-bottom: 16px !important;
+    background-color: $white;
   }
 }
