--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -1,7 +1,7 @@
 $white: #ffffff;
 $black: #000000;
 $primaryGradient: linear-gradient(223.9deg, #760E25 -0.02%, rgba(253, 164, 2, 0.4) 91.59%);
-$offWhite: #eeeeee;
+$offWhite: #f5f5f5;
 $offBlack: #434953;
 
 $primary: #760E25;
