--- a/frontend/src/components/shared/button/Button.scss
+++ b/frontend/src/components/shared/button/Button.scss
@@ -9,3 +9,13 @@
     padding: 2px 24px !important;
     border-radius: 20px !important;
 }
+
+@media only screen and (max-width: 640px) {
+    .button {
+        padding: 2px 32px !important;
+    }
+
+    .rounded-btn {
+        padding: 1px 12px !important;
+    }
+}
