--- a/frontend/src/components/widgets/wordDetails/WordDetails.scss
+++ b/frontend/src/components/widgets/wordDetails/WordDetails.scss
@@ -1,20 +1,23 @@
 @import "../../../styles/main.scss";
 
 .word-details-pane {
+  width: 500px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   .MuiDrawer-root {
     height: 100%;
   }
+
   .word-details-container {
     position: relative;
 
     .cross-icon {
       position: absolute;
       top: 30px;
-      right:20px;
+      right: 20px;
       cursor: pointer;
     }
 
@@ -39,9 +42,11 @@
       .MuiButtonBase-root {
         padding: 2px;
       }
+
       .top-row {
         display: flex;
         align-items: center;
+
         .icon {
           margin-left: 16px;
           width: 35px;
@@ -63,15 +68,24 @@
   .footer {
     padding: 16px;
     border-top: 1px solid $grey;
+
     .MuiButton-root {
       margin-right: 16px;
       color: $white;
+
       &:first-of-type {
         background-color: $green;
       }
+
       &:nth-of-type(2) {
         background-color: $red;
       }
     }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .word-details-pane {
+    width: 100%;
   }
 }
