--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -22,4 +22,6 @@ $boxShadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
 $boxShadowMedium: 10px 10px 50px rgba(0, 0, 0, 0.2);
 $boxShadowDark: 10px 10px 50px rgba(0, 0, 0, 0.5);
 $borderColor: #000000;
-$gutters: 64px;
+$guttersLaptop: 64px;
+$guttersTablet: 32px;
+$guttersMobile: 16px;
