--- a/frontend/src/components/pages/home/home.scss
+++ b/frontend/src/components/pages/home/home.scss
@@ -14,7 +14,7 @@
 
     overflow: hidden;
     display: flex;
-    padding: $gutters;
+    padding: $guttersLaptop;
     padding-bottom: 0px;
     flex-direction: column;
     background-image: url(../../../assets/images/backgroundMesh.svg);
@@ -109,7 +109,7 @@
   .services-container {
     width: 100%;
     height: 550px;
-    padding: 60px $gutters;
+    padding: 60px $guttersLaptop;
     background-color: $white;
     position: relative;
 
