--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -4,7 +4,7 @@
   display: flex;
   height: $headerHeight;
   align-items: center;
-  padding: 32px 64px;
+  padding: 32px $guttersLaptop;
   z-index: 100;
   background-color: transparent;
   color: $primary;
@@ -83,12 +83,12 @@
 
 @media only screen and (max-width: 1020px) {
   .header-container {
-    padding: 32px 32px;
+    padding: 32px $guttersTablet;
   }
 }
 
 @media only screen and (max-width: 640px) {
   .header-container {
-    padding: 32px 16px;
+    padding: 32px $guttersMobile;
   }
 }
