--- a/frontend/src/components/pages/login/Login.scss
+++ b/frontend/src/components/pages/login/Login.scss
@@ -31,6 +31,7 @@
         @extend .headerBlack;
         margin-bottom: 16px;
       }
+
       position: absolute;
 
       .sub-greeting {
@@ -62,6 +63,7 @@
       .helper-text {
         @extend .bodyLight;
         margin-bottom: 8px;
+
         .link {
           color: blue;
           text-decoration: underline;
@@ -69,9 +71,11 @@
           font-weight: 400;
         }
       }
+
       .helper-text-login {
         @extend .bodyLight;
         margin: 32px 0px 8px;
+
         .link {
           color: blue;
           text-decoration: underline;
@@ -133,5 +137,34 @@
       }
     }
 
+  }
+}
+
+@media only screen and (max-width: 1020px) {
+  .login-screen {
+    .login-container {
+      .form {
+        padding: 0px 120px 0px 120px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .login-screen {
+    .login-container {
+      .greetings {
+        display: none;
+      }
+
+      .watermark {
+        display: none;
+      }
+
+      .form {
+        width: 100%;
+        padding: 0px 64px 0px 64px;
+      }
+    }
   }
 }
