--- a/frontend/src/components/pages/leaderboard/Leaderboard.scss
+++ b/frontend/src/components/pages/leaderboard/Leaderboard.scss
@@ -18,6 +18,7 @@
     align-items: flex-start;
     background-color: $white;
     width: 50%;
+    height: 70%;
     height: fit-content;
     padding: 32px 0px 32px 64px;
     border-radius: 12px;
@@ -37,6 +38,36 @@
       font-weight: 600;
       width: 40%;
       color: $primary;
+    }
+  }
+}
+
+@media only screen and (max-width: 1020px) {
+  .leaderboard-page-container {
+    .content-container {
+      width: 70%;
+      height: 60%;
+      padding: 32px 0px 32px 32px;
+      .content {
+        top: 32px;
+        left: 32px;
+      }
+      .lottie {
+        min-height: 160px !important;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .leaderboard-page-container {
+    .content-container {
+      width: 90%;
+      padding: 16px 0px 16px 16px;
+      .content {
+        top: 32px;
+        left: 32px;
+      }
     }
   }
 }
