--- a/frontend/src/components/pages/home/home.scss
+++ b/frontend/src/components/pages/home/home.scss
@@ -286,6 +286,9 @@
 
       .content {
         align-items: center;
+        .tagline {
+          font-size: 24px !important;
+        }
         .content-info {
           width: 80%;
           text-align: center;
