--- a/frontend/src/components/pages/login/Login.scss
+++ b/frontend/src/components/pages/login/Login.scss
@@ -10,6 +10,7 @@
     position: relative;
     display: flex;
     justify-content: flex-end;
+    background-color: white;
 
     .watermark {
       height: 100vh;
@@ -20,23 +21,20 @@
     }
 
     .greetings {
-      width: calc(100vw - 80vw);
-      left: 32px;
-      top: 25%;
       z-index: 100;
-      text-align: left;
-      color: $white;
+      text-align: center;
+      color: $black;
+      width: 80%;
 
       .header-greeting {
         @extend .headerBlack;
-        margin-bottom: 16px;
+        margin-bottom: 32px;
       }
 
       position: absolute;
 
       .sub-greeting {
-        @extend .bodyRegular;
-        line-height: 20px;
+        @extend .labelSemiBold;
       }
     }
 
@@ -48,7 +46,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding: 0px 240px 0px 120px;
+      padding: 0px 12.5vw 0px 6.25vw;
 
       .heading {
         @extend .labelHeading;
@@ -137,14 +135,28 @@
       }
     }
 
-  }
-}
+    .greeting-container {
+      background: url(../../../assets/images/backgroundMesh2.svg);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 40vw;
+      height: 100vh;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
-@media only screen and (max-width: 1020px) {
-  .login-screen {
-    .login-container {
-      .form {
-        padding: 0px 120px 0px 120px;
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        z-index: 2;
+        width: 100%;
+        height: 100vh;
+        // background-color: #00000033;
       }
     }
   }
@@ -163,7 +175,13 @@
 
       .form {
         width: 100%;
-        padding: 0px 64px 0px 64px;
+      }
+
+      .greeting-container {
+        display: none;
+        &::after {
+          display: none;
+        }
       }
     }
   }
