--- a/frontend/src/components/pages/explore/Explore.scss
+++ b/frontend/src/components/pages/explore/Explore.scss
@@ -32,6 +32,11 @@
         height: 24px;
       }
 
+      .clickable-icon {
+        @extend .icon;
+        cursor: pointer;
+      }
+
       .MuiInput-underline:before,
       .MuiInput-underline:after {
         border-bottom: 0px;
@@ -81,6 +86,13 @@
         border: none;
       }
     }
+  }
+
+  .no-result-text {
+    margin-top: 12px;
+    @extend .labelHeading;
+    font-weight: 500;
+    color: $primary; 
   }
 
   .word-grid-container {
