--- a/frontend/src/components/pages/quizzes/Quiz.scss
+++ b/frontend/src/components/pages/quizzes/Quiz.scss
@@ -18,18 +18,11 @@
       align-items: center;
 
       .timer-container {
-        background-color: $white;
-        width: fit-content;
-        border-radius: 50%;
-        padding: 8px;
-        margin-top: 32px;
-        @extend .bodyRegular;
-
-        .timeLeft {
-          font-weight: 500;
-          font-size: 24px;
-          color: $primary;
-        }
+        position: absolute;
+        top: 0px;
+        width: 100vw;
+        height: fit-content;
+        left: 0px;
       }
 
       .ques-container {
