--- a/frontend/src/layout/header/Header.scss
+++ b/frontend/src/layout/header/Header.scss
@@ -6,10 +6,13 @@
   align-items: center;
   padding: 32px $guttersLaptop;
   z-index: 100;
-  background-color: transparent;
+  background-color: $white;
   color: $primary;
   width: 100%;
   justify-content: space-between;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 
   .navigation-tabs {
     display: flex;
