--- a/frontend/src/layout/container/Container.scss
+++ b/frontend/src/layout/container/Container.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     position: relative;
     background-color: $offWhite;
-    min-height: calc(100vh - 50px);
+    min-height: 100vh;
     width: 100%;
 }
 
